--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://novashop.io.vn",
-  "scripts": {
+   "scripts": {
     "dev": "next dev -p 4000",
-     "build": "next build",
-  "start": "next start"
+    "build": "next build",
+  "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.1.1",
